--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 
 *{
     box-sizing: border-box;
+    
   }
   
   .column {
@@ -30,18 +31,14 @@
     color: black;
   }
   
-  
-  
-  
-
 
 
   .column.image{
       width: 30%;
-      background-color: #dfd;
-      
-      
-      
+      background-color: #dfd;      
+  }
+  .column.image img{
+    width: 100%;
   }
 
   .column.description{
@@ -75,9 +72,11 @@
 
   
   .footer {
-
-    background-color: #f1f1f1;
-    padding:10px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #ddd;
     text-align: center;
   }
   
